package com.mikeescom.proxypattern;

public interface Image {
    void display();
}
